terratest/1_cluster/resources/ingress_empty.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    x.y.io/ep: '[{"addresses":["1.2.3.4"],"port":80}]'
    xxx: "xxx"
  name: ing
spec:
  ingressClassName: nginx
  rules:
  - host: terratest-ep-lifecycle.cloud.example.com
    http:
      paths:
      - backend:
          service:
            name: frontend-podinfo
            port:
              name: http
        path: /
        pathType: Prefix
