terratest/1_cluster/resources/ingress_invalid.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    k8gb.io/strategy: invalid
  name: ing
spec:
  ingressClassName: nginx
  rules:
  - host: terratest.cloud.example.com
    http:
      paths:
      - backend:
          service:
            name: frontend-podinfo
            port:
              name: http
        path: /
        pathType: Prefix
